--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --color-ocean: #404bbf;
   --color-iris: #4d5ae5;
   --color-slate: #434455;
+  --color-lite-slate: #8E8F99;
+  --color-green: #31D0AA;
 }
 
 p,
@@ -150,6 +152,12 @@ body {
   background: var(--color-navy-blue);
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/hero-pic.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
 }
 
 
@@ -186,6 +194,11 @@ body {
   background: var(--color-ocean);
 }
 
+.advantages-logo {
+  display: block;
+
+}
+
 .section-advantages {
   padding: 120px 0;
 }
@@ -197,7 +210,45 @@ body {
 .advantages-item {
   display: block;
   width: 264px;
+  /* background-image: url('../images/antenna1.svg'); */
 }
+
+.advantages-item::before  {
+  display: block;
+  width: 264px;
+  height: 112px;
+  content: "";
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--color-cloud);
+  margin-bottom: 8px;
+  background-image: url("../images/icons.svg#antenna");
+  
+}
+
+.advantages-item:nth-child(1)::before  {
+  content: "";
+  display: inline-block;
+  /* width: 1em; */
+  /* height: 1em; */
+  stroke-width: 0;
+  stroke: black;
+  fill:   black;
+  background-image: url('../images/icons.svg#antenna');
+  /* background-image: url('../images/antenna.svg'); */
+  /* fill: #404bbf; */
+  border-color: #31D0AA;
+}
+
+
+
+
+/* <svg class="advantages-logo" width="150" height="150">
+                <use href="./images/icons.svg#icon-antenna"></use>
+                <!-- <use href="./images/antenna.svg"></use> -->
+              </svg>
+              */
+
 .advantages-title {
   margin-bottom: 8px;
   font-weight: 500;
@@ -259,6 +310,8 @@ body {
 .team-list-item {
   background-color: var(--color-white);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 
 .team-item-block {
@@ -283,10 +336,81 @@ body {
   margin-top:  8px;
 }
 
+.team-social-list {
+  margin-top: 8px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.team-social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.team-social-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: var(--color-iris);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--color-cloud);
+}
+
+.team-social-link:is(:hover, :focus) {
+  background-color: var(--color-ocean);
+}
+
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.customers-list {
+  display: flex;
+  margin-top: 72px;
+  justify-content: center;
+  gap: 24px;
+  
+
+}
+
+.customers-item {
+  width: 168px;
+  height: 88px;
+  color: var(--color-lite-slate);
+  /* fill: currentColor; */
+} 
+
+.customers-link {
+  color: inherit;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid currentColor;
+  border-radius: 4px;
+  fill: currentColor;
+}
+
+.customers-item:is(:hover, :focus) {
+  /* fill: var(--color-ocean);
+  border-color: var(--color-ocean); */
+  color: var(--color-ocean);
+  /* background-color: tomato; */
+}
 .footer {
   background: var(--color-navy-blue);
   padding-top: 100px;
   padding-bottom: 100px;}
+
+.footer-container {
+  display: flex;
+}
 
 .footer-block {
   display: block;
@@ -307,6 +431,53 @@ body {
   color: var(--color-cloud);
 }
 
+.footer-socials {
+  margin-left: 120px;
+  color: var(--color-white);
+}
+
+.footer-social-header {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.footer-social-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-list {
+  margin-top: 16px;
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+  gap: 16px;
+}
+
+.footer-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid red; */
+  border-radius: 50%;
+  background-color: var(--color-slate);
+  fill: var(--color-white);
+}
+
+.footer-social-link:is(:hover, :focus) {
+  background-color: var(--color-green);
+}
+
+.footer-link-icon {
+  /* align-items: center;
+  justify-content: center; */
+}
 /* portfolio */
 .portfolio-projects-section {
   padding-top: 96px;
@@ -314,7 +485,7 @@ body {
 }
 
 .filters-list {
-  display: flex;
+   display: flex;
   justify-content: center;
   margin-bottom: 72px;
   /* padding-top: 96px;
@@ -346,7 +517,7 @@ body {
 
 .portfolio-button:is(:hover, :focus) {
   color: var(--color-white);
-
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   background: var(--color-ocean);
   border-color: transparent;
 }
@@ -363,6 +534,9 @@ body {
   flex-basis: calc((100% - 48px) / 3);
 }
 
+.item-portfolio:is(:hover, :focus) {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .portfolio-item-container {
   padding: 32px 16px;
   border-bottom: 1px solid #E7E9FC;
