--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,9 @@ body {
 }
 
 .header {
+  display: block;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-style,
@@ -188,6 +190,7 @@ body {
   border-radius: 4px;
   border-color: transparent;
   cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button:is(:hover, :focus) {
@@ -215,7 +218,7 @@ body {
 
 .advantages-item::before  {
   display: block;
-  width: 264px;
+  /* width: 264px; */
   height: 112px;
   content: '';
   background-repeat: no-repeat;
@@ -223,11 +226,12 @@ body {
   background-size: 60px 64px;
   background-color: var(--color-cloud);
   margin-bottom: 8px;
-  /* background-image: url("../images/icons.svg#antenna");../images/antenna.svg */
+  /* background-image: url("../images/icons.svg#antenna");../images/antenna.svg advantages-item */
   
 }
 
 .advantages-item:nth-child(1):before  {
+  /* background-image: url("../images/icons.svg#advantages-item"); */
   background-image: url("../images/antenna.svg");
   
 }
@@ -388,12 +392,12 @@ body {
 .customers-item {
   width: 168px;
   height: 88px;
-  color: var(--color-lite-slate);
+  /* color: var(--color-lite-slate); */
   /* fill: currentColor; */
 } 
 
 .customers-link {
-  color: inherit;
+  color: var(--color-lite-slate);
   width: 100%;
   height: 100%;
   display: flex;
@@ -404,7 +408,7 @@ body {
   fill: currentColor;
 }
 
-.customers-item:is(:hover, :focus) {
+.customers-link:is(:hover, :focus) {
   /* fill: var(--color-ocean);
   border-color: var(--color-ocean); */
   color: var(--color-ocean);
@@ -541,7 +545,8 @@ body {
   flex-basis: calc((100% - 48px) / 3);
 }
 
-.item-portfolio:is(:hover, :focus) {
+.portfolio-projets-item {display: block;}
+.portfolio-projets-item:is(:hover, :focus) {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-item-container {
