--- a/css/styles.css
+++ b/css/styles.css
@@ -397,21 +397,21 @@ body {
 } 
 
 .customers-link {
-  color: var(--color-lite-slate);
+  /* color: var(--color-lite-slate); */
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid currentColor;
+  border: 1px solid var(--color-lite-slate); /*currentColor;*/
   border-radius: 4px;
-  fill: currentColor;
+  fill: var(--color-lite-slate); /*currentColor;*/
 }
 
 .customers-link:is(:hover, :focus) {
-  /* fill: var(--color-ocean);
-  border-color: var(--color-ocean); */
-  color: var(--color-ocean);
+  fill: var(--color-ocean);
+  border-color: var(--color-ocean);
+  /* color: var(--color-ocean); */
   /* background-color: tomato; */
 }
 .footer {
